# sqlite-gui

./: CMakeLists.txt
src/: resource.rc
